Fix bugs on owner side in product inventory

--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -37,7 +37,7 @@
                                                 <td data-label="Product ID" class="custom-mobile-align product-id productid"></td>
                                                 <td data-label="Branch ID" class="custom-mobile-align branch-id branchid">
                                                     <% if (accesstype === "Owner") { %>
-                                                        <select class="form-control text-center" name="branchlist" id="branchlist">
+                                                        <select class="form-control text-center" name="branchlist" id="branchlist" disabled>
                                                             <option value="">Select Branch</option>
                                                         </select>
                                                     <% } %>
