--- a/views/productiontransfer/productiontransfer.ejs
+++ b/views/productiontransfer/productiontransfer.ejs
@@ -13,6 +13,24 @@
                         <h6 class="m-0 font-weight-bold table-title">Product Inventory Report: </h6>
                     </div>
                     <div class="card-body">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-6">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Transfer ID</span>
+                                    </div>
+                                    <input id="transferid" name="transferid" type="text" class="form-control" placeholder="Enter Production Line" aria-label="transferid" aria-describedby="basic-addon1" disabled>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Branch ID</span>
+                                    </div>
+                                    <input id="branchidmodal" name="branchidmodal" type="text" class="form-control" placeholder="Enter Production Line" aria-label="transferid" aria-describedby="basic-addon1" disabled>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row mb-2">
                             <div class="col-6">
                                 <div class="input-group">
@@ -84,6 +102,18 @@
                             </div>
                         </div>
                         <div class="row mb-1 d-flex justify-content-center">
+                            <% if (accesstype === "Owner") { %>
+                                <div class="col-md-6">
+                                    <div class="input-group">
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">Branch</span>
+                                        </div>
+                                        <select class="form-control text-center" name="branchlist" id="branchlist">
+                                            <option value="">Select Branch</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            <% } %>
                             <div class="col-md-6">
                                 <div class="input-group">
                                     <div class="input-group-append">
